<resources>
    <string name="app_name">GithubTestApp</string>
    <string name="close">Закрыть</string>
    <string name="unexpected_error">Необработанная ошибка</string>
    <string name="internal_app_error">Внутренная ошибка приложения</string>
    <string name="server_timeout_error">Превышено время соединения с сервером</string>
    <string name="server_connection_find_error">Не удалось соединиться с сервером</string>
    <string name="unexpected_server_error_message">Необработанная ошибка при выполении запроса</string>
    <string name="dont_have_permission">Нет разрешения</string>
    <string name="fake_error">Фэйковая ошибка для тестов</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="try_again">Попробовать снова</string>
    <string name="empty_data">Данных нет</string>
    <string name="sign_in">Авторизация</string>
    <string name="enter">Войти</string>
    <string name="done">Готово!</string>
    <string name="empty_login_error">Логин не может быть пустым</string>
    <string name="empty_password_error">Пароль не может быть пустым</string>
    <string name="users">Пользователи</string>
    <string name="profile">Профиль</string>
    <string name="open_drawer">Открыть боковое меню</string>
    <string name="close_drawer">Закрыть блоковое меню</string>
    <string name="organization">Организация:</string>
    <string name="repositories">Репозиториев:</string>
    <string name="gists">Gists:</string>
    <string name="private_repo">Приватных репозиториев:</string>
    <string name="owned_private_repo">Собственных приватных репозиториев:</string>
    <string name="description">Описание:</string>
    <string name="search">Поиск</string>
    <string name="repo_not_found">Репозитории не найдены</string>
    <string name="time_to_search">Тут мы ищем пользователей :)</string>
    <string name="user_avatar">Изображение пользователя</string>
    <string name="no_repo">Репозиториев нет</string>
    <string name="users_not_found">Пользователи не найдены</string>
    <string name="no_more_searched_users">Больше пользователей не найдено</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="empty_name_error">Имя не может быть пустым</string>
    <string name="empty_email_error">Email не может быть пустым</string>
    <string name="change">Изменить</string>
    <string name="name">Имя:</string>
    <string name="email">Email:</string>
    <string name="repo_list_repositories">Репозитории</string>
</resources>
