<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/partial_toolbar"
        android:id="@+id/toolbar"/>

    <EditText
        android:id="@+id/et_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:hint="@string/login"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/et_login"
        app:layout_constraintLeft_toLeftOf="@+id/et_login"
        app:layout_constraintRight_toRightOf="@+id/et_login" />

    <TextView
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textSize="18sp"
        android:textColor="@drawable/btn_text_color"
        android:padding="12dp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintRight_toRightOf="@+id/et_password"/>

    <include layout="@layout/partial_progress_state_simple"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
        app:layout_constraintLeft_toLeftOf="@+id/et_password"
        app:layout_constraintRight_toRightOf="@+id/et_password"/>

</android.support.constraint.ConstraintLayout>