<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/partial_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:text="@string/name"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_title"
                app:layout_constraintLeft_toLeftOf="@+id/tv_name_title"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/tv_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/email"
                app:layout_constraintLeft_toLeftOf="@+id/et_name"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_title"
                app:layout_constraintLeft_toLeftOf="@+id/tv_email_title"
                app:layout_constraintRight_toRightOf="@+id/et_name" />

            <TextView
                android:id="@+id/tv_company_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/organization"
                app:layout_constraintLeft_toLeftOf="@+id/et_email"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <EditText
                android:id="@+id/et_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_company_title"
                app:layout_constraintLeft_toLeftOf="@+id/tv_company_title"
                app:layout_constraintRight_toRightOf="@+id/et_email" />

            <TextView
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textSize="18sp"
                android:textColor="@drawable/btn_text_color"
                android:padding="12dp"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@+id/et_company"
                app:layout_constraintRight_toRightOf="@+id/et_company"/>

            <include layout="@layout/partial_progress_state_simple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@+id/btn_submit"
                app:layout_constraintLeft_toLeftOf="@+id/et_company"
                app:layout_constraintRight_toRightOf="@+id/et_company"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</LinearLayout>

