<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include android:id="@+id/progress_view"
        layout="@layout/partial_progress_state"
        tools:visibility="invisible"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/profile_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            tools:src="@drawable/ic_github_circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            tools:text="login"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar"
            app:layout_constraintLeft_toRightOf="@+id/iv_avatar"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            tools:text="name"
            app:layout_constraintLeft_toLeftOf="@+id/tv_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <TextView
            android:id="@+id/tv_company_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:text="@string/organization"
            app:layout_constraintLeft_toLeftOf="@+id/iv_avatar"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            tools:text="organization"
            app:layout_constraintLeft_toRightOf="@+id/tv_company_title"
            app:layout_constraintBottom_toBottomOf="@+id/tv_company_title" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            tools:text="email"
            app:layout_constraintLeft_toLeftOf="@+id/tv_company_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_company_title" />

        <LinearLayout
            android:id="@+id/btn_repositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/tv_repo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:text="@string/repositories"
                app:layout_constraintLeft_toLeftOf="@+id/tv_company_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_company_title" />

            <TextView
                android:id="@+id/tv_repo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                tools:text="2"
                app:layout_constraintLeft_toLeftOf="@+id/tv_company_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_company_title" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_gists_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:text="@string/gists"
            app:layout_constraintLeft_toLeftOf="@+id/btn_repositories"
            app:layout_constraintTop_toBottomOf="@+id/btn_repositories" />

        <TextView
            android:id="@+id/tv_gists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            tools:text="2"
            app:layout_constraintLeft_toRightOf="@+id/tv_gists_title"
            app:layout_constraintBottom_toBottomOf="@+id/tv_gists_title" />

        <TextView
            android:id="@+id/tv_private_repo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:text="@string/private_repo"
            app:layout_constraintLeft_toLeftOf="@+id/tv_gists_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_gists_title" />

        <TextView
            android:id="@+id/tv_private_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            tools:text="2"
            app:layout_constraintLeft_toRightOf="@+id/tv_private_repo_title"
            app:layout_constraintBottom_toBottomOf="@+id/tv_private_repo_title" />

        <TextView
            android:id="@+id/tv_owned_private_repo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:text="@string/owned_private_repo"
            app:layout_constraintLeft_toLeftOf="@+id/tv_private_repo_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_private_repo_title" />

        <TextView
            android:id="@+id/tv_owned_private_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            tools:text="0"
            app:layout_constraintLeft_toRightOf="@+id/tv_owned_private_repo_title"
            app:layout_constraintBottom_toBottomOf="@+id/tv_owned_private_repo_title" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>